--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -16,6 +16,7 @@
     <script src="js/User.js"></script>
     <script src="js/Store.js"></script>
     <script src="js/Settings.js"></script>
+    <script src="js/ChatPanel.js"></script>
     <script src="js/Dialog.js"></script>
     <script src="js/script.js"></script>
 </head>
@@ -47,7 +48,13 @@
         <div class="mdc-dialog__backdrop"></div>
     </aside>
     <div class="menu mdc-elevation--z1">
-        <button title="Connect to server" onclick="connect()" class="mdc-button mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple">
+        <button title="Disconnect" onclick="onDisconnect()" class="disconnect-button mdc-button mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple">
+            <i class="fa fa-sign-out"></i>
+        </button>
+        <button title="Quick connect" onclick="quickConnect()" class="quick-connect-button mdc-button mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple">
+            <i class="fa fa-bolt"></i>
+        </button>
+        <button title="Connect to server" onclick="connect()" class="connect-button mdc-button mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple">
             <i class="fa fa-plug"></i>
         </button>
         <button title="Preferences" class="mdc-button mdc-ripple-upgraded" data-mdc-auto-init="MDCRipple">
@@ -90,7 +97,7 @@
                     </section>
                 </div>
             </div>
-            <div class="mdc-card chat-panel">
+            <div class="chat-panel">
             </div>
         </div>
         <div class="chat-input">
