--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -87,14 +87,7 @@
                     </ul>
                 </div>
                 <div class="mdc-card info-panel">
-                    <section class="mdc-card__primary">
-                        <h1 class="mdc-card__title mdc-card__title--large">Title goes here</h1>
-                        <h2 class="mdc-card__subtitle">Subtitle here</h2>
-                    </section>
-                    <section class="mdc-card__actions">
-                        <button class="mdc-button mdc-button--theme-dark mdc-button--compact mdc-card__action">Action 1</button>
-                        <button class="mdc-button mdc-button--theme-dark mdc-button--compact mdc-card__action">Action 2</button>
-                    </section>
+                    <canvas class="voice-visualizer"></canvas>
                 </div>
             </div>
             <div class="chat-panel">
