Renamed files to groupvoice

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>TeamSpeak 4</title>
+    <title>GroupVoice 4</title>
     <link rel="stylesheet" href="../../node_modules/material-components-web/dist/material-components-web.css">
     <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -12,7 +12,7 @@
     <script src="lib/RTCConnection/simplepeer.min.js"></script>
     <script src="lib/RTCConnection/RTCConnection.js"></script>
     <script src="lib/RTCConnection/SignalServer.js"></script>
-    <script src="js/TeamSpeak.js"></script>
+    <script src="js/GroupVoice.js"></script>
     <script src="js/User.js"></script>
     <script src="js/Store.js"></script>
     <script src="js/Settings.js"></script>
